--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,11 +1,10 @@
-<h1>Ajax#index</h1>
-<p id="hoge">赤色になるよ</p>
+h1 Ajax#index
+p#hoge 赤色になるよ
 
-<script>
-  $("#hoge").css("color","red")
-</script>
 
-<p>このページは仮のトップページです。</p>
 
-<%# ここに追加する %>
-<%= link_to "仮のボタンです", "#", class: "btn btn-primary" %>
+
+p このページは仮のトップページです。
+
+
+= link_to "仮のボタンです", "#", class: "btn btn-primary" 
