--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,10 +1,22 @@
-h1 Ajax#index
-p#hoge 赤色になるよ
+div.row
+  div.col-md-6.col-md-offset-3
+    = form_with model: @user, local: true do |f|
+      = f.label :name, 'アカウント名' 
+      = f.text_field :name, class: 'form-control' 
 
+      = f.label :account_name, 'アカウントID'
+      = f.text_field :account_name, class: 'form-control' 
 
+      = f.label :email , 'メールアドレス'
+      = f.email_field :email, class: 'form-control' 
 
+      = f.label :password , 'パスワード'
+      = f.password_field :password, class: 'form-control' 
 
-p このページは仮のトップページです。
+      = f.label :password_confirmation, "パスワード（確認）" 
+      = f.password_field :password_confirmation, class: 'form-control' 
 
+      = f.label :名前 
+      = f.text_field :name, class: 'form-control' 
 
-= link_to "仮のボタンです", "#", class: "btn btn-primary" 
+      = f.submit 'Create my account', class: "btn btn-primary" 
