--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,6 +1,7 @@
 div.row
   div.col-md-6.col-md-offset-3
     = form_with model: @user, local: true do |f|
+
       = f.label :name, 'アカウント名' 
       = f.text_field :name, class: 'form-control' 
 
@@ -10,13 +11,16 @@ div.row
       = f.label :email , 'メールアドレス'
       = f.email_field :email, class: 'form-control' 
 
+      = f.label :prof , 'プロフィール'
+      = f.text_field :prof, class: 'form-control' 
+
+      = f.label :picture , 'プロフィール写真'
+      = f.file_field :picture, class: 'form-control'
+
       = f.label :password , 'パスワード'
       = f.password_field :password, class: 'form-control' 
 
       = f.label :password_confirmation, "パスワード（確認）" 
       = f.password_field :password_confirmation, class: 'form-control' 
-
-      = f.label :名前 
-      = f.text_field :name, class: 'form-control' 
 
       = f.submit 'Create my account', class: "btn btn-primary" 
