--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,7 +1,7 @@
 div.row
   div.col-md-6.col-md-offset-3
     = form_with model: @user, local: true do |f|
-
+      == render "shared/error_messages" , object: f.object
       = f.label :name, 'アカウント名' 
       = f.text_field :name, class: 'form-control' 
 
