--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,9 +7,9 @@ header.navbar.navbar-fixed-top.navbar-inverse
         li = link_to "Help",   '#' 
         li = link_to "Log in", '#' 
         - if logged_in?
-          li = link_to "" ,"#"
-          li = link_to "" ,"#"
+          li = link_to "aa" ,"#"
+          li = link_to "ログアウト" , logout_path ,method: :delete
         - else
           li = link_to "新規登録" ,"#"
-          li = link_to "ログイン" ,"#"
+          li = link_to "ログイン" , login_path
         
