エラーメッセージ編集

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -10,6 +10,6 @@ header.navbar.navbar-fixed-top.navbar-inverse
           li = link_to "aa" ,"#"
           li = link_to "ログアウト" , logout_path ,method: :delete
         - else
-          li = link_to "新規登録" ,"#"
+          li = link_to "新規登録" , new_user_path
           li = link_to "ログイン" , login_path
         
