--- a/app/views/shared/_error_messages.html.slim
+++ b/app/views/shared/_error_messages.html.slim
@@ -1,9 +1,6 @@
 - if object.errors.any? 
     div#error_explanation
       div.alert.alert-danger
-        The form contains = pluralize(object.errors.count, "error") .
-    
-          ul
-            - object.errors.full_messages.each do |msg| 
-              li = msg 
-    
+        The form contains = #{pluralize(object.errors.count, "error")}.
+          ul - #{object.errors.full_messages.each do |msg|}
+            li = msg
