--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -23,4 +23,4 @@ div.row
       = f.label :password_confirmation, "パスワード（確認）" 
       = f.password_field :password_confirmation, class: 'form-control' 
 
-      = f.submit 'Create my account', class: "btn btn-primary" 
+      = f.submit 'アカウントを作成', class: "btn btn-primary" 
