--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,9 +7,13 @@ html
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    /= render 'layout/shim'
+    /= render 'layout/shim' ブラウザ対応
   body
     == render 'layouts/header'
+    /div.container
+    /  - flash.each do |message_type, message| 
+    /  div class="alert" class="alert-#{message_type}" 
+    /    = message 
     == yield
     == render 'layouts/footer'
     = debug(params) if Rails.env.development?
