--- a/app/views/shared/_error_messages.html.slim
+++ b/app/views/shared/_error_messages.html.slim
@@ -1,6 +1,7 @@
 - if object.errors.any? 
-    div#error_explanation
-      div.alert.alert-danger
-        The form contains = #{pluralize(object.errors.count, "error")}.
-          ul - #{object.errors.full_messages.each do |msg|}
-            li = msg
+  div#error_explanation
+    div.alert.alert-danger
+      = pluralize(object.errors.count, "error")
+      ul 
+        - object.errors.full_messages.each do |msg|
+          li = msg
