--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,10 +11,9 @@
  * It is generally better to create a new file per style scope.
  *
  *= require select2
+ *= require select2-bootstrap
  *= require_tree .
  *= require_self
  */
  @import "bootstrap";
- body{
-     font-family: "ヒラギノ丸ゴ ProN";
- }
+ 
