--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the reviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.review{
+  
+
+  h1{
+      font-size: 2em;
+      text-align:center;
+      margin-bottom:1em;
+      margin-top:1em;
+    }
+
+    .text-center{
+        margin-top:4%;
+    }
+
+  
+}
