--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -14,8 +14,8 @@ div.row
       = f.label :prof , 'プロフィール'
       = f.text_field :prof, class: 'form-control' 
 
-      = f.label :picture , 'プロフィール写真'
-      = f.file_field :picture, class: 'form-control'
+      = f.label :avatar , 'プロフィール写真'
+      = f.file_field :avatar, class: 'form-control'
 
       = f.label :password , 'パスワード'
       = f.password_field :password, class: 'form-control' 
