--- a/app/views/reviews/new.html.slim
+++ b/app/views/reviews/new.html.slim
@@ -82,7 +82,7 @@
           = f.label :blood , '血抜き有'
           = f.check_box :blood ,class: 'form-control' 
         .form-group
-          = f.label :picture , '画像'
-          = f.file_field :blood, class: 'form-control-file' 
+          = f.label :avatar , '画像'
+          = f.file_field :avatar, class: 'form-control-file' 
         .text-center
           = f.submit '投稿', class: "btn btn-primary" 
