--- a/app/views/users/_follow_form.html.slim
+++ b/app/views/users/_follow_form.html.slim
@@ -1,7 +1,7 @@
 - unless current_user?(@user) 
   #follow_form
-    if current_user.following?(@user) 
+    - if current_user.following?(@user) 
       = render 'unfollow' 
-    else 
+    - else 
       = render 'follow' 
   
