--- a/app/views/reviews/show.html.slim
+++ b/app/views/reviews/show.html.slim
@@ -1,4 +1,10 @@
 .container
-  == render "shared/review"
+  - if @reviews.any?
+    - @reviews.each do |review|
+      ol
+        == render "shared/review" , object: review
+        | Posted 
+        = time_ago_in_words(review.created_at)  
+        | ago.
   = link_to "削除", review_path(@review.id), method: :delete,
                                        data: { confirm: "You sure?" } 
