--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,50 @@
  */
  @import "bootstrap";
  
+ li{
+    list-style: none;
+ }
+
+ ol{
+    padding:0;
+ }
+
+ html {
+   font-size: 16px;
+  
+   @media (min-width: 576px) {
+     font-size: 12px;
+   }
+  
+   @media (min-width: 768px) {
+     font-size: 12px;
+   }
+
+   @media (min-width: 992px) {
+      font-size: 14px;
+    }
+
+    @media (min-width: 1200px) {
+      font-size: 16px;
+    }
+ }
+
+ .card-columns {
+   @include media-breakpoint-only(sm) {
+      column-count: 1;
+    }
+   @include media-breakpoint-only(ls) {
+      column-count: 1;
+    }
+    @include media-breakpoint-only(md) {
+      column-count: 2;
+    }
+   @include media-breakpoint-only(lg) {
+     column-count: 2;
+   }
+   @include media-breakpoint-only(xl) {
+     column-count: 3;
+   }
+ }
+ 
+ 
