--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -16,7 +16,7 @@
         = f.text_field :prof, class: 'form-control' 
       .form-group  
         = f.label :avatar , 'プロフィール写真'
-        = f.file_field :avatar, class: 'form-control'
+        = f.file_field :avatar, class: 'form-control-file'
       .form-group  
         = f.label :password , 'パスワード'
         = f.password_field :password, class: 'form-control' 
