--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -4,7 +4,7 @@
   = @user.activated 
   = @user.id 
   = link_to "編集" , edit_user_path 
-  == render "follow_form" if logged_in? 
+  == render "follow_form" , object: @user if logged_in? 
   == render "shared/profile"
   - if @reviews.any?
     .card-columns
