--- a/app/views/users/_follow.html.slim
+++ b/app/views/users/_follow.html.slim
@@ -1,3 +1,3 @@
 = form_with(model: current_user.active_relationships.build) do |f| 
- = hidden_field_tag :followed_id, @user.id 
+ = hidden_field_tag :followed_id, object.id 
  = f.submit "Follow", class: "btn btn-primary" 
