--- a/app/views/users/_follow_form.html.slim
+++ b/app/views/users/_follow_form.html.slim
@@ -1,7 +1,7 @@
-- unless current_user?(@user) 
+- unless current_user?(object) 
   #follow_form
-    - if current_user.following?(@user) 
-      = render 'unfollow' 
+    - if current_user.following?(object) 
+      = render 'unfollow' , object: object
     - else 
-      = render 'follow' 
+      = render 'follow' , object: object
   
