--- a/app/views/users/show_follow2.html.slim
+++ b/app/views/users/show_follow2.html.slim
@@ -1,27 +1,28 @@
-h1.text-center.mt-5.mb-5 =@title
-- if @users.present?
-  - @users.each do |user| 
-    div.container
-      div.row.border.rounded.mb-1.follow_user.mb-3
-        div.col-sm-2.col-4
-          - if user.avatar.attached?
-            = image_tag user.avatar.variant(combine_options:{resize:"50x50^",crop:"50x50+0+0",gravity: :center}).processed,class: "mx-auto d-block img-fluid user_image" 
-          -else
-            = image_tag "noimage.png" ,class: "mx-auto d-block img-fluid user_image" 
-        div.col-sm-2.col-8.nameinfo
-          p
-            = user.name 
-          p
-            = user.account_name
-        div.col-sm-6.col-12.text-left.overflow-auto
-          p.prof
-            = user.prof
+.show_follow
+  h1.text-center.mt-5.mb-5 =@title
+  - if @users.present?
+    - @users.each do |user| 
+      div.container
+        div.row.border.rounded.mb-1.follow_user.mb-3
+          div.col-sm-2.col-4
+            - if user.avatar.attached?
+              = image_tag user.avatar.variant(combine_options:{resize:"50x50^",crop:"50x50+0+0",gravity: :center}).processed,class: "mx-auto d-block img-fluid user_image" 
+            -else
+              = image_tag "noimage.png" ,class: "mx-auto d-block img-fluid user_image" 
+          div.col-sm-2.col-8.nameinfo
+            p
+              = user.name 
+            p
+              = user.account_name
+          div.col-sm-6.col-12.text-left.overflow-auto.border
+            p.prof
+              = user.prof
 
-        div#follow_form.col-sm-2.col-3.text-center
-          - if current_user.following?(user) 
-            = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
-              = f.submit "Unfollow", class: "btn btn-primary" 
-          - else
-            = form_with(model: current_user.active_relationships.build) do |f| 
-              = hidden_field_tag :followed_id, user.id 
-              = f.submit "Follow", class: "btn btn-primary" 
+          div#follow_form.col-sm-2.col-3.text-center
+            - if current_user.following?(user) 
+              = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
+                = f.submit "Unfollow", class: "btn btn-primary" 
+            - else
+              = form_with(model: current_user.active_relationships.build) do |f| 
+                = hidden_field_tag :followed_id, user.id 
+                = f.submit "Follow", class: "btn btn-primary" 
