--- a/app/views/fishes/index.html.slim
+++ b/app/views/fishes/index.html.slim
@@ -4,10 +4,14 @@
     .col-12.text-center.mb-3
       = search_form_for(@q, url:fishes_path) do |f|
         = f.label :name, "魚種名" ,class: "mr-3"
-        = f.search_field :name_cont 
-        = f.submit "検索"  ,class: "ml-3"
+        = f.search_field :name_cont ,class: "rounded-lg"
+        = f.submit "検索"  ,class: "ml-3 btn btn-success btn-sm"
       end 
     - @fishes.each do |fish|
-      .col-12.col-xs-6.col-sm-4.col-md-3
-        = link_to fish.name , fish_path(fish)
+      - if fish.nil?
+        p 
+          |見つかりませんでした
+      - else
+        .col-12.col-xs-6.col-sm-4.col-md-3
+          = link_to fish.name , fish_path(fish)
         
