--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,2 +1,2 @@
- $("#follow_form").html("<%= escape_javascript(render('users/unfollow , object: @user')) %>");
-$("#followers").html('<%= object.followers.count %>');  
+$("#follow_form").html("<%= j(render 'users/unfollow', object: @user) %>");
+$("#followers").html('<%= @user.followers.count %>'); 
