--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -2,18 +2,37 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .review{
-  
-
   h1{
       font-size: 2em;
       text-align:center;
       margin-bottom:1em;
       margin-top:1em;
-    }
+  }
+  .text-center{
+      margin-top:4%;
+  }
+}
 
-    .text-center{
-        margin-top:4%;
-    }
+.review-index__review input{
+  position: absolute;
+  top: 50%; /*親要素を起点に上から50%*/
+  left: 50%;  /*親要素を起点に左から50%*/
+  transform: translateY(-50%) translateX(-50%); /*要素の大きさの半分ずつを戻す*/
+  -webkit-transform: translateY(-50%) translateX(-50%);
+}
 
-  
+.user_image {
+  overflow: hidden;
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  // transform: translate(-50%, -50%);
+  // -webkit-transform: translate(-50%, -50%);
+}
+
+.review__index-search-item {
+  display:block;
+  @media (min-width: 576px) {
+    display: inline-block;
+  }
 }
