--- a/app/views/reviews/index.html.slim
+++ b/app/views/reviews/index.html.slim
@@ -1,28 +1,26 @@
 .container
-  h1.mt-5.mb-5.text-center 投稿一覧
-  .row
-    .col-12.text-center.mb-3
-      = search_form_for(@q, url:reviews_path) do |f|
-
-        = f.label :fish, "魚種" ,class: "d-inline-block" 
-        = f.select :fish_id,  Fish.all.map{|fish| [fish.name , fish.id]} ,{include_blank: true},class: "js-selectable"
-        
-        = f.label :season, "時期" ,class: ""
-
-        = f.collection_select :season_eq, Review.all, :season, :season, :include_blank => '指定なし',  placeholder: "時期" , class: "col-10 col-sm-5 rounded-lg mb-4"
-        
-        = f.label :place, "場所" ,class: ""
-        = f.collection_select :place_eq ,Review.all, :place,:place, placeholder: "場所" ,:include_blank => '指定なし', class: "col-10 col-sm-5 rounded-lg mb-4"
-
-        = f.label :taste_level, "食味評価" ,class: ""
-        = f.collection_select :taste_level_eq ,Review.all, :taste_level,:taste_level, placeholder: "食味評価" , :include_blank => '指定なし',class: "col-10 col-sm-5 rounded-lg mb-4"
-
-        = f.submit "検索"  ,class: "ml-3 btn btn-success btn-sm "
-      end
+  h1.mt-5.mb-3.text-center 投稿一覧
+  
+  = search_form_for(@q, url:reviews_path) do |f|
+    .review__index-search.justify-content-around.mx-sm-3.mb-5.border.px-4.py-4.rounded-pill.bg-gray
+      .review__index-search-item
+        = f.label :fish_id, "魚種　" ,class: "d-inline-block m" 
+        = f.select :fish_id_eq, options_for_select(Fish.joins(:reviews).distinct.map{|fish| [fish.name , fish.id]},:selected =>"指定なし") ,{include_blank: true},class: "js-selectable"
+      .review__index-search-item    
+        = f.label :season, "時期(月)　" ,class: ""
+        = f.collection_select :season_eq, Review.select(:season).group(:season), :season, :season, :include_blank => '指定なし',  placeholder: "時期" , class: "col-10 col-sm-5 rounded-lg mb-4"
+      .review__index-search-item
+        = f.label :place, "場所　" ,class: ""
+        = f.collection_select :place_eq ,Review.select(:place).group(:place), :place,:place, placeholder: "場所" ,:include_blank => '指定なし', class: "col-10 col-sm-5 rounded-lg mb-4"
+      .review__index-search-item
+        = f.label :taste_level, "食味評価　" ,class: ""
+        = f.collection_select :taste_level_eq ,Review.select(:taste_level).group(:taste_level), :taste_level,:taste_level, placeholder: "食味評価" , :include_blank => '指定なし',class: "col-10 col-sm-5 rounded-lg mb-4"
+      .review__index-search-item
+        = f.submit "検索"  ,class: "ml-3 btn btn-success btn-sm w-100"
+  end
       
   - if @reviews.any?
-    .card-columns
-      - @reviews.each do |review|  
-        ol 
-          li
-            == render "shared/review" , object: review
+    .row
+      - @reviews.each do |review|   
+          .col-12.col-md-6.mx-0.px-0
+            == render "shared/index_review" , object: review
