--- a/app/views/fishes/index.html.slim
+++ b/app/views/fishes/index.html.slim
@@ -7,11 +7,13 @@
         = f.search_field :name_cont ,class: "rounded-lg"
         = f.submit "検索"  ,class: "ml-3 btn btn-success btn-sm"
       end 
+      -if @fishes.empty?
+        p.text-center.fish-index__search-nil
+          | 見つかりませんでした
     - @fishes.each do |fish|
-      - if fish.nil?
-        p 
-          |見つかりませんでした
-      - else
-        .col-12.col-xs-6.col-sm-4.col-md-3
-          = link_to fish.name , fish_path(fish)
-        
+      .col-12.col-xs-6.col-sm-4.col-md-3
+        = link_to fish.name , fish_path(fish)
+        span.fish-index__count
+          |( 
+          = fish.reviews.count
+          |件)
