--- a/app/views/reviews/index.html.slim
+++ b/app/views/reviews/index.html.slim
@@ -1,11 +1,11 @@
-.container
+
   h1.mt-5.mb-3.text-center 投稿一覧
   
   = search_form_for(@q, url:reviews_path) do |f|
-    .review__index-search.justify-content-around.mx-sm-3.mb-5.border.px-4.py-4.rounded-pill.bg-gray
+    .review__index-search.d-sm-flex.justify-content-around.mx-sm-3.mb-5.border-bottom.px-4.py-4.bg-gray
       .review__index-search-item
-        = f.label :fish_id, "魚種　" ,class: "d-inline-block m" 
-        = f.select :fish_id_eq, options_for_select(Fish.joins(:reviews).distinct.map{|fish| [fish.name , fish.id]},:selected =>"指定なし") ,{include_blank: true},class: "js-selectable"
+        = f.label :fish_id, "魚種　" ,class: "" 
+        = f.select :fish_id_eq, options_for_select(Fish.joins(:reviews).distinct.map{|fish| [fish.name , fish.id]},:selected =>"指定なし") ,{include_blank: true},class: "js-selectable mb-4"
       .review__index-search-item    
         = f.label :season, "時期(月)　" ,class: ""
         = f.collection_select :season_eq, Review.select(:season).group(:season), :season, :season, :include_blank => '指定なし',  placeholder: "時期" , class: "col-10 col-sm-5 rounded-lg mb-4"
@@ -16,11 +16,15 @@
         = f.label :taste_level, "食味評価　" ,class: ""
         = f.collection_select :taste_level_eq ,Review.select(:taste_level).group(:taste_level), :taste_level,:taste_level, placeholder: "食味評価" , :include_blank => '指定なし',class: "col-10 col-sm-5 rounded-lg mb-4"
       .review__index-search-item
-        = f.submit "検索"  ,class: "ml-3 btn btn-success btn-sm w-100"
+        = f.submit "検索"  ,class: "ml-3 btn btn-success btn-sm mx-auto"
   end
       
   - if @reviews.any?
-    .row
+    .row.justify-content-around
       - @reviews.each do |review|   
-          .col-12.col-md-6.mx-0.px-0
-            == render "shared/index_review" , object: review
+          .review-partial.col-12.col-md-6.p-3
+            .review-partial__box.shadow
+              == render "shared/index_review" , object: review
+              .review-partial__time
+                = time_ago_in_words(review.created_at) 
+                |前
